removed dark mode and fixed some layout and introduced new button class

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
 .App {
   margin: auto;
 }
+
+.button {
+  @apply text-white text-nowrap bg-blue-700 font-medium text-sm w-min px-5 py-2.5 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300;
+}
